Archive/5662f313779a1b2aa3f4cf81f184d232-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:22:36: error: expected ‘}’ at end of input
     std::cout << words << std::endl;
                                    ^
